# gr-aep

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.md  MANIFEST.yml  README.md
.conda/: README.md
apps/: CMakeLists.txt
docs/: CMakeLists.txt  README.aep
examples/: CMakeLists.txt  aep_example.grc  aep_example_4_channel.grc
grc/: CMakeLists.txt  aep_aep_channel_processing.block.yml  aep_aep_channel_processing.xml  aep_aep_metric.block.yml  aep_aep_metric.xml  aep_apply_weights.block.yml  aep_apply_weights.xml  aep_spatial_cov_per_sc.block.yml  aep_spatial_cov_per_sc.xml  aep_uniform_linear_array.block.yml  aep_uniform_linear_array.xml
lib/: CMakeLists.txt  aep_channel_processing_impl.cc  aep_channel_processing_impl.h  aep_metric_impl.cc  aep_metric_impl.h  apply_weights_impl.cc  apply_weights_impl.h  qa_aep.cc  qa_aep.h  qa_aep_channel_processing.cc  qa_aep_channel_processing.h  qa_aep_metric.cc  qa_aep_metric.h  qa_apply_weights.cc  qa_apply_weights.h  qa_spatial_cov_per_sc.cc  qa_spatial_cov_per_sc.h  spatial_cov_per_sc_impl.cc  spatial_cov_per_sc_impl.h  test_aep.cc
python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  qa_aep_channel_processing.py  qa_aep_metric.py  qa_apply_weights.py  (+2 more)
python/aep/bindings/: CMakeLists.txt  aep_channel_processing_python.cc  aep_metric_python.cc  apply_weights_python.cc  python_bindings.cc  spatial_cov_per_sc_python.cc
python/aep/bindings/docstrings/: aep_channel_processing_pydoc_template.h  aep_metric_pydoc_template.h  apply_weights_pydoc_template.h  spatial_cov_per_sc_pydoc_template.h
(+34 files in other folders)
